fixed file upload & editor input jump

--- a/public/editor.css
+++ b/public/editor.css
@@ -10,6 +10,10 @@ input {
 	font-size: 1.25vw;
 }
 
+input.hidden {
+	display: none;
+}
+
 .flex-child {
 	flex: 1;
 	margin: 0 0.5vw;
